tui/tests/snapshots/notebook_breadcrumb_failures__workspace_note_reopen.snap
---
source: tui/tests/notebook_breadcrumb_failures.rs
expression: text
snapshot_kind: text
---
 Note 'Workspace' normal mode                                                                          [?] Show keymap 
[Browser]                                   ▐ 󱇗 Sample Note  󱇗 Workspace                                                
 󰝰 Notes                                    ▐                                                                           
   󰝰 Tmp                                    ▐                                                                           
     󱇗 Workspace                            ▐                                                                           
   󱇗 Sample Note                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐ NORMAL   󰝰 Notes  󰝰 Tmp  󱇗 Workspace 
